[package]
name = "temp_rs_workshop"
version = "0.1.0"
authors = ["Charalampos Fanoulis <yo@fanoulis.dev>", "Panagiotis Vasilopoulos <hello@alwayslivid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "sticker_quest_workshop"
path = "main.rs"
